--- a/.github/workflows/deploy_nwb2bids_on_dandisets.yml
+++ b/.github/workflows/deploy_nwb2bids_on_dandisets.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Add and commit changes
         run: | # `|| true` below to skip if nothing changed
+          git pull
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add dandisets
