--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.13
+      - name: Install dependencies
+        run: pip install dandi tabulate2 tqdm
 
       - name: Run dashboard update
         id: run-dashboard-update
