--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -13,9 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Clone repo
+        run: git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/bids-dandisets/dashboard.git
 
       - name: Setup Python
         uses: actions/setup-python@v5
