--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Clone repo
-        run: git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/bids-dandisets/dashboard.git
+        run: git clone https://x-access-token:${{ secrets._GITHUB_API_KEY }}@github.com/bids-dandisets/dashboard.git
 
       - name: Setup Python
         uses: actions/setup-python@v5
