--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -47,7 +47,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: Error during update of BIDS-Dandisets Dashboard
+          subject: "CI Failure: BIDS-Dandisets Dashboard Update"
           to: cody.c.baker.phd@gmail.com  # Add more with comma separation (no spaces)
           from: bids-dandisets
           body: "Please check the latest run of the BIDS-Dandisets Dashboard update: https://github.com/bids-dandisets/dashboard/actions/workflows/update-dashboard.yml"
