--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -2,7 +2,7 @@ name: Update Dashboard
 
 on:
   schedule:
-    - cron: "0 13 * * *"  # 8am EST
+    - cron: "0 11 * * *"  # 7am eastern time
   workflow_dispatch:
 
 env:
