--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -31,8 +31,7 @@ jobs:
           cd dashboard
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git add content/table_data.json
+          git add .
           git commit --message "update"
           git push
 
