--- a/.github/workflows/update-common-issues.yml
+++ b/.github/workflows/update-common-issues.yml
@@ -1,15 +1,15 @@
-name: Update dashboard
+name: Update common issues
 
 on:
   schedule:
-    - cron: "0 11 * * *"  # 7am eastern time
+    - cron: "0 15 * * *"  # ~10am eastern time
   workflow_dispatch:
 
 env:
   GITHUB_TOKEN: ${{ secrets._GITHUB_API_KEY }}
 
 jobs:
-  UpdateBidsDandisetsDashboard:
+  UpdateCommonIssues:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,7 +24,7 @@ jobs:
         run: pip install dandi tabulate2 tqdm
 
       - name: Run dashboard update
-        run: python dashboard/scripts/update_dashboard.py
+        run: python dashboard/scripts/update_common_issues.py
 
       - name: Upload changes
         run: |
@@ -37,8 +37,8 @@ jobs:
 
   NotifyOnFailure:
     runs-on: ubuntu-latest
-    needs: [ UpdateBidsDandisetsDashboard ]
-    if: ${{ always() && needs.UpdateBidsDandisetsDashboard.result == 'failure' }}
+    needs: [ UpdateCommonIssues ]
+    if: ${{ always() && needs.UpdateCommonIssues.result == 'failure' }}
     steps:
       - uses: dawidd6/action-send-mail@v3
         with:
@@ -46,7 +46,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: "CI Failure: BIDS-Dandisets Dashboard Update"
+          subject: "CI Failure: BIDS-Dandisets Common Issues Update"
           to: cody.c.baker.phd@gmail.com  # Add more with comma separation (no spaces)
           from: bids-dandisets
-          body: "Please check the latest run of the BIDS-Dandisets Dashboard update: https://github.com/bids-dandisets/dashboard/actions/workflows/update-dashboard.yml"
+          body: "Please check the latest run of the BIDS-Dandisets Common Issues update: https://github.com/bids-dandisets/dashboard/actions/workflows/update-common-issues.yml"
